--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     border-radius: 50px;
     display: flex;
     position: absolute;
-    flex-direction: column;
+    flex-wrap: wrap;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -41,4 +41,43 @@ body{
     justify-content: right;
     align-items: center;
     padding: 10px;
+}
+.commandButton{
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    justify-content: center;
+}
+.btn{
+    width: 115px;
+    height: 115px;
+    border-radius: 57px;
+    font-size: 100px;
+    padding: 10px;
+    text-align: center;
+    align-items: center;
+    margin: 3px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    font-family: 'Courier New', Courier, monospace;
+
+}
+.btn:nth-child(17){
+    border: none;
+    outline: 0;
+    gap: none;
+    margin: 3px 0 3px 3px;
+    border-radius: 57px 0 0 57px;
+}
+.btn:nth-child(18){
+    border: none;
+    gap: none;
+    margin: 3px 3px 3px 0;
+    outline: 0;
+    margin-left: -4px;
+    border-radius: 0 57px 57px 0;
 }
